--- a/Module2Folder/Html file for mod2.html
+++ b/Module2Folder/Html file for mod2.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html>
+<link rel="stylesheet" href="styles.css">
+<meta charset ="utf-8">
+<meta name="viewport content=width=device-width, initial=scale=1">
 <head>
 	<title>Title here</title>
 </head>
 <body>
-	<h1>h1 sample</h1>
-	<h2>h2 sample</h2>
-	<blockquote>blockquote sample</blockquote>
-	<h1>h1 sample again</h1>
+
+<div class="row">
+	<div class="col-lg-4 col-md-6 col-sm-12">
+			<p>Item 1
+				<p class ="food-title">
+				duh
+				</p>	
+			</p>
+			
+			
+	</div>
+
+	<div class="col-lg-4 col-md-6 col-sm-12">
+		<p>
+			Item 2
+		</p>
+	</div>
+
+	<div class="col-lg-4 col-md-12 col-sm-12">
+		<p>
+			Item 3
+		</p>
+	</div>
+
+</div>
+
+
+
 </body>
 </html>
